# toolsaf

./: .gitignore  .pylintrc  APIServer.md  CHANGELOG.md  ClaimIntro.md  ClientTool.md  CommandLine.md  DSLIntro.md  Dockerfile  Info.md  Install.md  LICENSE  Makefile  README.md  Roadmap.md  Tools.md  check_version.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code_check.yml  pylint.yml  pylint_and_pytest.yml  pypi_upload.yml  regression_test.yml
documentation/: Architecture.md  CommandLineOptions.md  Contributing.md  CreatingSecurityStatements.md  MoreStatementFeatures.md  README.md  Services.md  Tools.md  UploadingData.md  VerifyingSecurityStatements.md
documentation/architecture/: Adapters.md  Common.md  Core.md  Main.md  Matching.md  README.md  Serialization.md
documentation/img/: deltaco-smart-plug.drawio
regression_tests/: run_statements.py  test_setup.json
samples/basic-a/: system.py
samples/device-backend/: statement.py
samples/device-backend-mobile/: statement.py
samples/iot-a/: system.py
samples/ruuvi/: ruuvi.py  ruuvi_claims.py
tcsfw/: address.py  address_resolver.py  android_manifest_scan.py  basics.py  batch_import.py  builder_backend.py  censys_scan.py  claim.py  claim_coverage.py  claim_set.py  client_api.py  client_tool.py  command_basics.py  components.py  coverage_result.py  default_requirements.py  entity.py  entity_database.py  etsi_en_303_645.py  etsi_ts_103_701.py  event_interface.py  event_logger.py  events.py  har_scan.py  http_server.py  inspector.py  latex_output.py  launcher.py  main.py  main_basic.py  main_tools.py  matcher.py  mitm_log_reader.py  model.py  nmap_scan.py  pcap_reader.py  ping_command.py  property.py  registry.py  release_info.py  (+22 more)
tcsfw/data/: etsi_ts_103_701.txt
tdsaf/: android_manifest_scan.py  batch_import.py  builder_backend.py  censys_scan.py  claim_coverage.py  claim_set.py  client_api.py  client_tool.py  command_basics.py  components.py  coverage_result.py  default_requirements.py  diagram_visualizer.py  entity.py  entity_database.py  etsi_ts_103_701.py  event_interface.py  event_logger.py  har_scan.py  http_server.py  inspector.py  launcher.py  main.py  main_tools.py  matcher.py  mitm_log_reader.py  model.py  nmap_scan.py  pcap_reader.py  ping_command.py  property.py  registry.py  release_info.py  releases.py  requirement.py  result.py  selector.py  services.py  setup_reader.py  shell_commands.py  (+14 more)
tdsaf/adapters/: android_manifest_scan.py  batch_import.py  censys_scan.py  certmitm_reader.py  github_releases.py  har_scan.py  mitm_log_reader.py  nmap_scan.py  pcap_reader.py  ping_command.py  releases.py  setup_reader.py  shell_commands.py  shodan_scan.py  spdx_reader.py  ssh_audit_scan.py  testsslsh_scan.py  tool_finder.py  tools.py  tshark_reader.py  vulnerability_reader.py  web_checker.py  zed_reader.py
tdsaf/base/: claim_coverage.py  claim_set.py  components.py  coverage_result.py  entity_database.py  event_interface.py  event_logger.py  inspector.py  main_tools.py  matcher.py  model.py  registry.py  requirement.py  result.py  selector.py  services.py
tests/: test_address.py  test_android_manifest_scan.py  test_arp.py  test_batch_import.py  test_builder.py  test_certmitm_reader.py  test_change_tracking.py  test_client_batch_upload.py  test_critical_data.py  test_db.py  test_dhcp.py  test_dns.py  test_edit_deserialized.py  test_event.py  test_finder.py  test_global_addresses.py  test_ignore_rules.py  test_inspector.py  test_listener.py  test_matcher.py  test_model.py  test_model_new.py  test_model_serializer.py  test_multicast_ranges.py  test_nmap_scan.py  test_other_protocols.py  test_pcap_reader.py  test_ping_command.py  test_property.py  test_ps_command.py  test_registry.py  test_results.py  test_selector.py  test_serialization.py  test_serializer.py  test_setup_reader.py  test_shodan_scan.py  test_software_backend.py  test_source_matching.py  test_spdx_reader.py  (+4 more)
toolsaf/: address_ranges.py  builder_backend.py  diagram_visualizer.py  main.py
(+148 files in other folders)
